examples/errors/primary_type_error.semantics
Program
  ProgramDeclaration
    ClassName: Main
    ProgramArguments
      Literals
        Literal: 1.100000
        Literal: 1.200000
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      Expression
                        CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      Expression
                        CompoundExpression: Real
                          Arguments
                            Expressions
                              Expression
                                Primary: 5.000000
                      VariableName: a
